; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_conf.c_v3_check_critical.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_conf.c_v3_check_critical.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"critical,\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @v3_check_critical to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @v3_check_critical(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  %5 = load i8**, i8*** %3, align 8
  %6 = load i8*, i8** %5, align 8
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @strlen(i8* %7)
  %9 = icmp slt i32 %8, 9
  br i1 %9, label %14, label %10

10:                                               ; preds = %1
  %11 = load i8*, i8** %4, align 8
  %12 = call i64 @strncmp(i8* %11, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 9)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %10, %1
  store i32 0, i32* %2, align 4
  br label %29

15:                                               ; preds = %10
  %16 = load i8*, i8** %4, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 9
  store i8* %17, i8** %4, align 8
  br label %18

18:                                               ; preds = %23, %15
  %19 = load i8*, i8** %4, align 8
  %20 = load i8, i8* %19, align 1
  %21 = call i64 @ossl_isspace(i8 signext %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %18
  %24 = load i8*, i8** %4, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %4, align 8
  br label %18

26:                                               ; preds = %18
  %27 = load i8*, i8** %4, align 8
  %28 = load i8**, i8*** %3, align 8
  store i8* %27, i8** %28, align 8
  store i32 1, i32* %2, align 4
  br label %29

29:                                               ; preds = %26, %14
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @strncmp(i8*, i8*, i32) #1

declare dso_local i64 @ossl_isspace(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
